Center button text and fix stretched images

--- a/frontend/src/components/restaurant/restaurant.css
+++ b/frontend/src/components/restaurant/restaurant.css
@@ -31,7 +31,8 @@
     width: 100%;
 }
 
-.image-container img {
+.image-container > img {
+    object-fit: cover;
     width: 100%;
     height: 100%;
 }
@@ -82,6 +83,9 @@
   width: 15vw;
   border: 1px solid white;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .choices > p:hover {
